hotfix cross layout

--- a/style.css
+++ b/style.css
@@ -467,12 +467,13 @@
   color: #f08365;
 }
 #es-RC-container .es-cross__figcaption--1 a {
-  background-color: white;
   border-radius: 10px;
   outline: 2px solid #f08365;
-  padding: 1rem 3rem;
+  padding: 1rem;
   text-decoration: none;
   color: #f08365;
+  width: 300px;
+  text-align: center;
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
   font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
@@ -488,12 +489,13 @@
   color: #ff9231;
 }
 #es-RC-container .es-cross__figcaption--2 a {
-  background-color: white;
   border-radius: 10px;
   outline: 2px solid #ff9231;
-  padding: 1rem 3rem;
+  padding: 1rem;
   text-decoration: none;
   color: #ff9231;
+  width: 300px;
+  text-align: center;
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
   font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
@@ -509,12 +511,13 @@
   color: #ffc317;
 }
 #es-RC-container .es-cross__figcaption--3 a {
-  background-color: white;
   border-radius: 10px;
   outline: 2px solid #ffc317;
-  padding: 1rem 3rem;
+  padding: 1rem;
   text-decoration: none;
   color: #ffc317;
+  width: 300px;
+  text-align: center;
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
   font-size: clamp(0.875rem, 0.8rem + 0.4vw, 1rem);
@@ -666,6 +669,9 @@
   #es-RC-container .es-cross__subtitle {
     height: 3rem;
     font-size: small;
+  }
+  #es-RC-container .es-cross__descr {
+    height: 2rem;
   }
   #es-RC-container .es-footer img {
     max-width: 50%;
