hotfix padding es-use

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@
   color: white;
 }
 #es-RC-container .es-use {
-  padding-top: 6rem;
+  padding: 6rem 3rem;
   text-align: center;
 }
 #es-RC-container .es-use__container {
