--- a/style.css
+++ b/style.css
@@ -26,88 +26,90 @@
   height: auto;
 }
 #es-RC-container .es-hero {
-  min-height: 300px;
   position: relative;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
 }
 #es-RC-container .es-hero__left {
-  background-image: url("./img/bg-hero-L.png");
+  background-image: url("./img/bg-hero-desktop.png");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: left bottom;
+  background-position: left;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+#es-RC-container .es-hero__left--headline {
+  color: white;
+  font-family: "gotham-condensed-bold", "Open Sans", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 700;
+  line-height: 0.9;
+  font-size: 36px;
+  text-shadow: 4px 2px 4px #a66161;
+  transform: rotate(355deg) skew(-5deg, 0deg);
+}
+#es-RC-container .es-hero__left--headline span {
+  animation: glow 2s ease-in-out infinite alternate;
+}
+#es-RC-container .es-hero__left--smaller {
+  font-size: 16px;
+  margin-top: 4px;
+  margin-bottom: 50px;
+}
+#es-RC-container .es-hero__right {
+  background-image: url("./img/bg-R-juicy-pineapple.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: white;
   text-transform: uppercase;
   font-weight: 700;
+}
+#es-RC-container .es-hero__right--logo {
+  max-width: 300px;
+  margin-inline: auto;
   padding: 1rem;
 }
-#es-RC-container .es-hero__left--logo {
-  max-width: 200px;
-  margin-inline: auto;
+#es-RC-container .es-hero__right--container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  position: relative;
+  padding-left: 3rem;
+  padding-bottom: 0.5rem;
 }
-#es-RC-container .es-hero__left--new {
+#es-RC-container .es-hero__right--new {
   background-color: #0f6848;
   max-width: -moz-fit-content;
   max-width: fit-content;
   padding: 0.2rem;
   transform: rotate(355deg) skew(-5deg, 0deg);
-}
-#es-RC-container .es-hero__left--title {
-  font-size: clamp(2.5rem, 2.3618rem + 0.6316vw, 2.875rem);
-  min-width: 10ch;
-  text-shadow: 4px 2px 4px #a66161;
-}
-#es-RC-container .es-hero__left--subtitle {
-  font-size: clamp(1.125rem, 1.0789rem + 0.2105vw, 1.25rem);
-  text-shadow: 4px 2px 4px #a66161;
-  text-align: center;
-}
-#es-RC-container .es-hero__right {
-  background-image: url("./img/bg-hero-R.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: right bottom;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  position: relative;
-  min-height: 500px;
-}
-#es-RC-container .es-hero__right--headline {
-  color: white;
   font-family: "gotham-condensed-bold", "Open Sans", sans-serif;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: 700;
-  font-size: 36px;
-  text-shadow: 4px 2px 4px #a66161;
-  transform: rotate(355deg) skew(-5deg, 0deg);
   position: absolute;
-  right: 1rem;
-  top: 1.5rem;
-  animation: glow 2s ease-in-out infinite alternate;
+  top: 0px;
+  left: 110px;
 }
-#es-RC-container .es-hero__middle {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-#es-RC-container .es-hero__middle--badge {
+#es-RC-container .es-hero__right--badge {
   max-width: 80px;
-  margin-left: 20px;
+  position: absolute;
+  z-index: 1;
+  top: 84px;
+  left: 8px;
 }
-#es-RC-container .es-hero__middle--packshot {
-  max-width: 270px;
+#es-RC-container .es-hero__right--packshot {
+  max-width: 300px;
   scale: 1;
   transition: all 200ms ease-in-out;
 }
-#es-RC-container .es-hero__middle--packshot:hover {
+#es-RC-container .es-hero__right--packshot:hover {
   scale: 1.05;
 }
 #es-RC-container .es-benefits {
@@ -562,16 +564,17 @@
   #es-RC-container .es-hero {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-evenly;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("./img/bg-hero-desktop.png");
   }
   #es-RC-container .es-hero__left {
-    flex-basis: 45%;
-  }
-  #es-RC-container .es-hero__left--subtitle {
-    padding-right: 8rem;
+    background-image: none;
   }
   #es-RC-container .es-hero__right {
-    flex-basis: 55%;
+    background-image: none;
   }
   #es-RC-container .es-hero__right--headline {
     top: unset;
