--- a/style.css
+++ b/style.css
@@ -294,6 +294,41 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  position: relative;
+}
+#es-RC-container .es-video__title {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: clamp(1.625rem, 1.4rem + 1.2vw, 2rem);
+  color: #f08365;
+  margin-inline: auto;
+  margin-top: 2rem;
+  text-align: center;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+#es-RC-container .es-video__title span {
+  display: block;
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: clamp(1.75rem, 1.45rem + 1.6vw, 2.25rem);
+  color: white;
+  text-shadow: -1px 1px 0 #f08365, 1px 1px 0 #f08365, 1px -1px 0 #f08365, -1px -1px 0 #f08365;
+}
+#es-RC-container .es-video__border {
+  border: 2px solid #f08365;
+  border-radius: 8px;
+  padding: 2rem;
+  padding-bottom: 6rem;
+  width: 90%;
+  position: absolute;
+  margin-top: 2rem;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
 }
 #es-RC-container .es-video__videoCnt {
   width: 72%;
